# stock-market-price-prediction

./: README.md  add_education_articles.py  admin.py  app.py  auth.py  cache_config.py  create_sample_content.py  currency_utils.py  extensions.py  main.py  models.py  portfolio.py  price_converter.py  pyproject.toml  requirements.txt  routes.py  sentiment.py  sentiment_analysis.py  stock_prediction.py  stock_prediction.py.bak  test_app.py  utils.py  utils_mock.py
attached_assets/: Pasted-Project-Title-Build-a-Stock-Market-Prediction-Web-Application-using-Flask-PostgreSQL-yFinance-an-1746280989126.txt
cache/: AAPL_1d.json  AAPL_1mo.json  AAPL_3mo.json  AAPL_5d.json  AAPL_6mo.json  AAPL_NASDAQ_1mo.json  AMZN_5d.json  GOOGL.NS_1d.json  GOOGL.NS_1mo.json  GOOGL_1d.json  GOOGL_5d.json  HDFCBANK.NS_1d.json  HDFCBANK.NS_1mo.json  HDFCBANK.NS_5d.json  HDFCBANK_1d.json  INFSYS.NS_1d.json  INFSYS.NS_1mo.json  INFY.NS_1d.json  INFY.NS_1mo.json  INFY.NS_5d.json  MSFT_1d.json  MSFT_1mo.json  MSFT_5d.json  RELIANCE.NS_1d.json  RELIANCE.NS_1mo.json  RELIANCE.NS_5d.json  RELIANCE_1d.json  SPY_1d.json  TCS.NS_1d.json  TCS.NS_1mo.json  TCS.NS_5d.json  TCS_1d.json  TCS_BSE_1d.json  TCS_NSE_1d.json  TCS_NSE_1mo.json  TCS_NSE_3mo.json  TCS_NSE_6mo.json  WIPRO.NS_1d.json  WIPRO.NS_1mo.json  WIPRO.NS_5d.json  (+14 more)
templates/: add_stock.html  article.html  change_password.html  currency.html  dashboard.html  edit_profile.html  education.html  index.html  layout.html  login.html  news.html  portfolio.html  prediction.html  profile.html  register.html  sell_stock.html  sentiment.html  (+2 more)
(+19 files in other folders)
